// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BackButton snapshot 1`] = `
<DocumentFragment>
  <div
    class="mb-6"
  >
    <a
      class="group inline-flex items-center gap-2 px-4 py-2 text-sm font-medium text-gray-600 bg-white/80 backdrop-blur-sm border border-gray-200 rounded-lg shadow-sm hover:bg-gray-50 hover:text-gray-900 hover:border-gray-300 hover:shadow-md transition-all duration-200 ease-in-out"
      href="/test"
    >
      <svg
        class="w-4 h-4 transition-transform duration-200 group-hover:-translate-x-1"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M244 400 100 256l144-144M120 256h292"
          fill="none"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="48"
        />
      </svg>
      Back to Menu
    </a>
  </div>
</DocumentFragment>
`;

exports[`BackButton with custom label snapshot 1`] = `
<DocumentFragment>
  <div
    class="mb-6"
  >
    <a
      class="group inline-flex items-center gap-2 px-4 py-2 text-sm font-medium text-gray-600 bg-white/80 backdrop-blur-sm border border-gray-200 rounded-lg shadow-sm hover:bg-gray-50 hover:text-gray-900 hover:border-gray-300 hover:shadow-md transition-all duration-200 ease-in-out"
      href="/test"
    >
      <svg
        class="w-4 h-4 transition-transform duration-200 group-hover:-translate-x-1"
        fill="currentColor"
        height="1em"
        stroke="currentColor"
        stroke-width="0"
        viewBox="0 0 512 512"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M244 400 100 256l144-144M120 256h292"
          fill="none"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="48"
        />
      </svg>
      Go Back
    </a>
  </div>
</DocumentFragment>
`;
